2009-05-05  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Reduce configure-time dependencies by using
	pkg-config the way it was originally intended to be used, and not
	with the incredibly lame and painful inducing pkg.m4 file. 

	I am on a quest to remove this gratuitous dep on pkg.m4 that is
	making people's lives miserable around the globe, just because
	someone can not be bothered to learn the shell if construct.

2009-04-28  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add an option to disable the solaris tar check.
	
	* configure.in: Define a TARGET_<ARCH> preprocessor symbol for some
	architectures.

2009-04-23  Jb Evain  <jbevain@novell.com>

	* scripts/Makefile.am: add a pdb2mdb script.

2009-04-22  Jeffrey Stedfast  <fejj@novell.com>

	* configure.in: Check for a stable version of glib-2.0 as opposed
	to an unstable development version (we don't want people
	unfamiliar with glib versioning to install an unstable development
	version of glib).

2009-04-13  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Quiet 'copying selected object files' messages from
	newer libtool versions as well.
	
	* configure.in: Disable AC_PROG_CXX for now to fix the windows build.

	In mono/mini:

	* Makefile.am: Comment out the cpp files as f@#%$ automake complains even
	if they are inside a conditional.
	
2009-04-03  Zoltan Varga  <vargaz@gmail.com>

	* scripts/patch-quiet.sh: Process LTCXXCOMPILE too.

2009-04-02  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Move the call to AC_PROG_CXX earlier and enable it again.
	
	* configure.in: Disable the call to AC_PROG_CXX for now.

2009-04-02  Marek Habersack  <mhabersack@novell.com>

	* data/Makefile.am: added system.web.mvc.pc{.in}

	* configure.in: added data/system.web.mvc.pc to AC_OUTPUT

	* data/system.web.mvc.pc.in: added

2009-04-02  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add an ENABLE_LLVM autoconf define.
	
	* configure.in: Add --enable-llvm argument to enable the experimental